IGNITE-17734 Test for all GCs